--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -150,3 +150,16 @@ aside {
   font-size: 12px;
   color: red;
  }
+ .icon-home1 {
+    float: right;
+    margin-top: 2px;
+    margin-right: -6px;
+    
+  }
+  .icon-cloud-upload {
+    float: left;
+    margin-top: 2px;
+    margin-right: -6px;
+    
+  }
+ 
