--- a/app/views/budgets/show.html.erb
+++ b/app/views/budgets/show.html.erb
@@ -15,8 +15,8 @@
   <dd><%= @budget.status %></dd>
   <dt><strong><%= model_class.human_attribute_name(:receiptno) %>:</strong></dt>
   <dd><%= @budget.receiptno %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:project_id) %>:</strong></dt>
-  <dd><%= @budget.project_id %></dd>
+  <dt><strong>Grant Name:</strong></dt>
+  <dd><%= @budget.project.name %></dd>
 </dl>
 
 <div class="form-actions">
