--- a/app/views/donors/index.html.erb
+++ b/app/views/donors/index.html.erb
@@ -1,6 +1,6 @@
 <%- model_class = Donor -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+  <h1><%=t '.title', :default => model_class.model_name.human %> <i class="icon-money icon-blue"></i></h1>
 </div>
 <table class="table table-striped">
   <thead>
