--- a/app/views/grantees/index.html.erb
+++ b/app/views/grantees/index.html.erb
@@ -1,6 +1,6 @@
 <%- model_class = Grantee -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize %> <i class="icon-user icon-blue"></i> <i class="icon-gift icon-blue"></i></h1>
 </div>
 
  
