--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
   <![endif]-->
-  <%= stylesheet_link_tag    "application", :media => "all" %>
+  <%= stylesheet_link_tag    "application", media: "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale= 1.0">
@@ -24,12 +24,14 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </a>
-        <a class="brand" href="#">GMS</a>
+        <a class="brand" href="index.html">GMS</a>
         <div class="nav-collapse">
           <ul class="nav">
             <li><%= link_to "Progress", progresses_path %></li>
             <li><%= link_to "Donors", donors_path %></li>
             <li><%= link_to "Grantees", grantees_path %></li>
+            <li><%= link_to "Staff", staffs_path %></li>
+            <li><%= link_to "Budgets", budgets_path %></li>
             
           </ul>
            <div class = "sign">
@@ -63,27 +65,24 @@
 
     <div class="row-fluid">
       <div class="span2">
-      <!-- <ul class="nav nav-list">
-  <li class="nav-header">List header</li>
-  <li class="active"><a href="#">Home</a></li>
-  <li><a href="#">Library</a></li>
-  <li><a href="#">Home <i class="icon-home icon-white"></i></a></li>
-  <li><a href="#">Library</a></li>
-</ul> -->
-<ul class="nav nav-tabs nav-stacked">
-   <li class="nav-header">Navigation</li>
-  <li><%= link_to '<i class="icon-suitcase icon-blue"></i>Grants'.html_safe, projects_path %></li>
-  <li><%= link_to '<i class="icon-money icon-blue"></i>Donors'.html_safe, donors_path %></li>
-   <li><%= link_to '<i class="icon-cogs icon-blue"></i>Progress'.html_safe, progresses_path %></i></li> 
-  <li><a href="#"> <i class="icon-home icon-blue"></i> Home </i></a></li>
-  <li><% link_to "Grantees", grantees_path %></li>
-  
-  
-  
-</ul>
+        <div class ="navi">
+     
+      <ul class="nav nav-tabs nav-stacked">
+        <li class="nav-header">Navigation</li>
+        <li>
+          <a href= "index.html"><i class="icon-home icon-blue"></i>Home</a></li>
+        <li><%= link_to '<i class="icon-suitcase icon-blue"></i>Grants'.html_safe, projects_path %></li>
+        <li><%= link_to '<i class="icon-money icon-blue"></i>Donors'.html_safe, donors_path %></li>
+        <li><%= link_to '<i class="icon-cogs icon-blue"></i>Progress'.html_safe, progresses_path %></i></li> 
+        <li><%= link_to '<i class="icon-gift icon-blue"></i> Grantee'.html_safe, grantees_path%></i></li>
+        <li><%= link_to '<i class="icon-group icon-blue"></i> Staff'.html_safe, staffs_path%></i></li>
+        <li><%= link_to '<i class="icon-bar-chart icon-blue"></i> Budget'.html_safe, budgets_path%></i></li>
+      </ul>
 
  
       </div>
+      </div>
+
       <div class="span10"><%= yield %></div>
       
       
