--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,6 +1,6 @@
 <%- model_class = Project -%>
 <div class="page-header">
-  <h1><!--<%=t '.title', :default => model_class.model_name.human.pluralize %>--> Grants</h1>
+  <h1><!--<%=t '.title', :default => model_class.model_name.human.pluralize %>--> Grants <i class="icon-suitcase icon-blue"></i></h1>
 </div> 
 <table class="table table-striped">
   <thead>
@@ -39,7 +39,7 @@
         <td><%= project.donor_id %></td>
         <!--<td><%= project.ledger_id %></td>-->
         <td><%= project.budget_id %></td>
-        <td><%= project.grantee_id %></td>
+        <td><%= project.grantee.organization %></td>
         <td><%= project.startdate %></td>
         <td><%= project.finish %></td>
        <!-- <td><%=l project.created_at %></td>-->
