--- a/app/views/grantees/_form.html.erb
+++ b/app/views/grantees/_form.html.erb
@@ -4,7 +4,7 @@
   <%= f.input :firstname %>
   <%= f.input :lastname %>
   <%= f.input :email %>
-  <%= f.input :memorandumou %>
+  <%= f.input :memorandumou, hint: '*pdf files only' %>
   <%= f.input :organization %>
   <%= f.input :description %>
   <%= f.input :project_id, label: 'Grant Name'  do %>
