--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,10 +1,10 @@
 <footer>
 <nav class="round">
 <ul>
-<%= link_to "About", '#' %> |
-<%= link_to "Contact", '#' %> |
-<a href="http://news.railstutorial.org/">News</a> |
-<a href="http://www.railstutorial.org/">Rails Tutorial</a> |
+<%= link_to "About", about_path %> |
+<%= link_to "Contact", contact_path %> |
+<%= link_to "Help", help_path %> |
+<a href="public.index">Home</a> |
 
 </nav>
 </footer>
