--- a/app/views/budgets/index.html.erb
+++ b/app/views/budgets/index.html.erb
@@ -6,7 +6,7 @@
 </div>
 </div>
 
-<table class="table table-striped">
+<table class="table table-bordered">
   <thead>
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
