--- a/app/views/donors/_form.html.erb
+++ b/app/views/donors/_form.html.erb
@@ -7,7 +7,7 @@
     <%= f.input :project_id, label: 'Grant Name'  do %>
      <%= f.collection_select :project_id, Project.order(:name), :id, :name, include_blank:true %>
     <%end%>  
-    <%= f.input :balance %>
+    <%= f.input :balance, :readonly => true %>
     
   <div class="form-actions">
     <%= f.button :submit,"Create", :class => 'btn-primary' %>
