--- a/app/views/donors/index.html.erb
+++ b/app/views/donors/index.html.erb
@@ -2,7 +2,7 @@
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human %> <i class="icon-money icon-blue"></i></h1>
 </div>
-<table class="table table-striped">
+<table class="table table-bordered">
   <thead>
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
@@ -22,7 +22,7 @@
         <td><%= donor.name %></td>
         <td><%= donor.description %></td>
         <td><%= number_to_currency(donor.funding) %></td>
-        <td><%= donor.project_id %></td>
+        <td><%= donor.project.name %></td>
         <td><%= number_to_currency donor.balance %></td>
         <td><%=l donor.created_at %></td>
 
