--- a/app/views/grantees/show.html.erb
+++ b/app/views/grantees/show.html.erb
@@ -3,7 +3,7 @@
   <h1><%=t '.title', :default => model_class.model_name.human %></h1>
 </div>
 
-<dl class="dl-horizontal">
+ <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:firstname) %>:</strong></dt>
   <dd><%= @grantee.firstname %></dd>
   <dt><strong><%= model_class.human_attribute_name(:lastname) %>:</strong></dt>
@@ -11,12 +11,12 @@
   <dt><strong><%= model_class.human_attribute_name(:email) %>:</strong></dt>
   <dd><%= @grantee.email %></dd>
   <dt><strong><%= model_class.human_attribute_name(:mou) %>:</strong></dt>
-  <dd><%= link_to @grantee.memorandumou.name, @grantee.memorandumou.url, :target => '_blank' %> <h>*click to download</h></dd> 
+  <dd><%= link_to "PDF", @grantee.memorandumou.url, :target => '_blank' %> <h>*click to download</h></dd> 
   <dt><strong><%= model_class.human_attribute_name(:organization) %>:</strong></dt>
   <dd><%= @grantee.organization %></dd>
   <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
   <dd><%= @grantee.description %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:project_id) %>:</strong></dt>
+  <dt><strong>Grant:</strong></dt>
   <dd><%= @grantee.project_id %></dd>
   <dt><strong><%= model_class.human_attribute_name(:date) %>:</strong></dt>
   <dd><%= @grantee.date %></dd>
