--- a/app/views/progresses/index.html.erb
+++ b/app/views/progresses/index.html.erb
@@ -3,7 +3,7 @@
   <h1><%=t '.title', :default => model_class.model_name.human %> <i class="icon-cogs icon-blue"></i></h1>
 </div>
 
-<table class="table table-striped">
+<table class="table table-bordered">
   <thead>
     <tr>
       <!--<th><%= model_class.human_attribute_name(:id) %></th> -->
