--- a/app/views/progresses/show.html.erb
+++ b/app/views/progresses/show.html.erb
@@ -14,7 +14,7 @@
   <dd><%= @progress.status %></dd>
   <dt><strong><%= model_class.human_attribute_name(:date) %>:</strong></dt>
   <dd><%= @progress.date %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:session_id) %>:</strong></dt>
+  <dt><strong>User:</strong></dt>
   <dd><%= @progress.session_id %></dd>
 </dl>
 
