--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,14 +1,12 @@
 <%= simple_form_for @project, :html => { :class => 'form-horizontal' } do |f| %>
   <%= f.input :name %>
   <%= f.input :location, placeholder: 'eg: Nairobi, Kenya' %>
-  <%= f.input :balance, disabled: true %>
+  <%= f.input :balance, :readonly => true %>
   <%= f.input :amount, placeholder: 'in USD ($)', label: 'Grant Awarded' %>
-  <%= f.input :accountnumber %>
+  <%= f.input :accountnumber, label: 'File number'%>
   <%= f.input :donor_id do %>
     <%= f.collection_select :donor_id, Donor.order(:name), :id, :name, include_blank: true %>
-    <%end%>  
-  <%= f.input :ledger_id, disabled: true %>
-  <%= f.input :budget_id %>
+    <%end%>
   <%= f.input :grantee_id do %>
    <%= f.collection_select :grantee_id, Grantee.order(:organization), :id, :organization, include_blank: true %>
    <%end%>
