--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,6 +1,6 @@
 <%- model_class = Project -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+  <h1>Grant <i class="icon-suitcase icon-blue"></i></h1>
 </div>
 <div class= "span7">
 <dl class="dl-horizontal">
@@ -16,10 +16,10 @@
   <dd><%= number_to_currency @project.balance %></dd>
   <dt><strong><%= model_class.human_attribute_name(:amount) %>:</strong></dt>
   <dd><%= number_to_currency @project.amount %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:accountnumber) %>:</strong></dt>
+  <dt><strong>File Number:</strong></dt>
   <dd><%= @project.accountnumber %></dd>
   <dt><strong><%= model_class.human_attribute_name(:donor_id) %>:</strong></dt>
-  <dd><%= @project.donor_id %></dd>
+  <dd><%= @project.donor.name %></dd>
   <!--<dt><strong><%= model_class.human_attribute_name(:ledger_id) %>:</strong></dt>
   <dd><%= @project.ledger_id %></dd> -->
   <dt><strong><%= model_class.human_attribute_name(:budget_id) %>:</strong></dt>
@@ -31,6 +31,8 @@
   <dt><strong><%= model_class.human_attribute_name(:finish) %>:</strong></dt>
   <dd><%= @project.finish %></dd>
 </dl>
+
+<p><%= link_to "Printable PDF", project_path(@project, format: "pdf") %> </p> 
 
 <div class="form-actions">
   <%= link_to t('.back', :default => t("helpers.links.back")),
