--- a/app/views/staffs/_form.html.erb
+++ b/app/views/staffs/_form.html.erb
@@ -5,7 +5,7 @@
       <%= f.collection_select :project_id, Project.order(:name), :id, :name, include_blank:true %>
     <%end%>  
   <%= f.input :description %>
-  <%= f.input :attachment, hint: 'Click to upload document.', label_html: { class: 'icon-cloud-upload' }%>
+  <%= f.input :attachment, hint: '*Click to upload PDF document.', label_html: { class: 'icon-cloud-upload' }%>
   <%= f.input :grantee_id do %>
     <%= f.collection_select :grantee_id, Grantee.order(:organization), :id, :organization, include_blank: true %>
   <%end%>
