--- a/app/views/staffs/index.html.erb
+++ b/app/views/staffs/index.html.erb
@@ -2,7 +2,7 @@
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human %> <i class="icon-group icon-blue"></i></h1>
 </div>
-<table class="table table-striped">
+<table class="table table-bordered">
   <thead>
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
@@ -24,7 +24,7 @@
         <td><%= staff.lastname %></td>
         <td><%= staff.project.name %></td>
         <td><%= staff.description %></td>
-        <td><i ></i><%= link_to staff.attachment.name, staff.attachment.url, :target => '_blank' , :class =>"icon-folder-open-alt icon-blue icon-4"%> </td>
+        <td><i ></i><%= link_to 'PDF', staff.attachment.url, :target => '_blank' , :class =>"icon-folder-open-alt icon-blue icon-4"%> </td>
         <td><%= staff.grantee_id %></td>
         <td><%=l staff.created_at %></td>
         <td>
