--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -2,6 +2,14 @@
 <div class="page-header">
   <h1><!--<%=t '.title', :default => model_class.model_name.human.pluralize %>--> Grants <i class="icon-suitcase icon-blue"></i></h1>
 </div> 
+<%= search_form_for @search do |f| %>
+  <div class="field">
+    <%= f.text_field :name_cont, placeholder:'Grant Name' %></div>
+  
+  <%= f.submit "Search" %> 
+ </div>
+<% end %>
+
 <table class="table table-bordered">
   <thead>
     <tr>
