--- a/app/views/staffs/index.html.erb
+++ b/app/views/staffs/index.html.erb
@@ -1,6 +1,9 @@
 <%- model_class = Staff -%>
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human %> <i class="icon-group icon-blue"></i></h1>
+      <div class="progress">
+    <div class="bar" style="width: 100%;"></div>
+    </div>
 </div>
 <table class="table table-bordered">
   <thead>
@@ -29,7 +32,7 @@
         <td><%=l staff.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_staff_path(staff), :class => 'btn btn-mini icon-trash' %>
+                      edit_staff_path(staff), :class => 'btn btn-mini' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
                       staff_path(staff),:class => 'btn btn-mini icon-trash',
                       :method => :delete,
