--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -99,7 +99,14 @@ list-style: square;
     }
   }
 }
+.dload{
+  border-top: 2px solid #e8e8e8;
+}
+.download{
+  border-top: 1px solid #e8e8e8;
+  padding-bottom: 10px;
 
+}
 
 /* Progress */
 
