--- a/app/views/budgets/index.html.erb
+++ b/app/views/budgets/index.html.erb
@@ -6,6 +6,8 @@
 </div>
 </div>
 
+<div class ="download"><b>Download:</b><%= link_to image_tag('/assets/XLS.png'), url_for(:format=>"xlsx") %></div>
+
 <table class="table table-bordered">
   <thead>
     <tr>
