--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -9,7 +9,9 @@
   <%= f.submit "Search" %> 
  </div>
 <% end %>
-
+<div class ="download"><b>Download:</b>
+<%= link_to image_tag('/assets/XLS.png'), url_for(:format=>"xlsx") %>
+</div>
 <table class="table table-bordered">
   <thead>
     <tr>
