--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -2,7 +2,7 @@
 <div class="page-header">
   <h1>Grant <i class="icon-suitcase icon-blue"></i></h1>
 </div>
-<div class= "span7">
+<div class= "span8">
 <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
   <dd><%= @project.name %></dd>
@@ -30,9 +30,12 @@
   <dd><%= @project.startdate %></dd>
   <dt><strong><%= model_class.human_attribute_name(:finish) %>:</strong></dt>
   <dd><%= @project.finish %></dd>
+  
 </dl>
-
-<p><%= link_to "Printable PDF", project_path(@project, format: "pdf") %> </p> 
+<div class = "dload">
+<p><b>Download:</b></p>
+<p><%= link_to image_tag('/assets/PDFs.png'), project_path(@project, format: "pdf") %> </p> 
+</div>
 
 <div class="form-actions">
   <%= link_to t('.back', :default => t("helpers.links.back")),
@@ -44,10 +47,12 @@
               :method => 'delete',
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
               :class => 'btn btn-danger' %>
+
+              
 </div>
 </div>
 
-<div class = "span3">
+<div class = "span2">
  
   <%if @project.budgets.any? %>
     <h6> Expenditure History: Showing <%= @project.budgets.count %> record(s) </h6>
