--- a/app/views/budgets/index.html.erb
+++ b/app/views/budgets/index.html.erb
@@ -1,6 +1,6 @@
 <%- model_class = Budget -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human %> History <i class="icon-bar-chart icon-blue"></i> </h1>
+  <h1>Transactions Listing </h1>
   
 <div> <b>Initial Allocated amount:</b>
 </div>
