--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -12,12 +12,11 @@
    <%end%>
   <%= f.input :startdate %>
   <%= f.input :finish %>
+  <%= f.input :milestones %>
+  <%= f.input :stage %>
   <div class="form-actions">
     <%= f.button :submit, :class => 'btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
                 projects_path, :class => 'btn' %>
   </div>
 <% end %>
-
-
-
