--- a/app/views/budgets/show.html.erb
+++ b/app/views/budgets/show.html.erb
@@ -1,7 +1,7 @@
 <%- model_class = Budget -%>
 <div class="page-header">
 
-  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+  <h1><h1>Transactions Listing </h1></h1>
 </div>
 
 <dl class="dl-horizontal">
