--- a/app/views/donors/show.html.erb
+++ b/app/views/donors/show.html.erb
@@ -2,32 +2,54 @@
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human %></h1>
 </div>
-
-<dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
-  <dd><%= @donor.name %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
-  <dd><%= @donor.description %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:funding) %>:</strong></dt>
-  <dd><%=number_to_currency @donor.funding %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:project_id) %>:</strong></dt>
-  <dd><%= @donor.project.name %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:balance) %>:</strong></dt>
-  <dd><%= number_to_currency @donor.balance %></dd>
-</dl>
-
-
-
-
-
-<div class="form-actions">
-  <%= link_to t('.back', :default => t("helpers.links.back")),
-              donors_path, :class => 'btn'  %>
-  <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_donor_path(@donor), :class => 'btn' %>
-  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              donor_path(@donor),
-              :method => 'delete',
-              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-              :class => 'btn btn-danger' %>
+<div class= "span8">
+  <div class="tabbable"> <!-- Only required for left/right tabs -->
+    <ul class="nav nav-tabs">
+     <li class="active"><a href="#tab1" data-toggle="tab">Donor details</a></li>
+     <li><a href="#tab2" data-toggle="tab">Grantees </a></li>
+     <li><a href="#tab3" data-toggle="tab">Transaction History</a></li>
+    </ul>
+    <div class="tab-content">
+     <div class="tab-pane active" id="tab1">
+        <dl class="dl-horizontal">
+          <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
+          <dd><%= @donor.name %></dd>
+          <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
+          <dd><%= @donor.description %></dd>
+          <dt><strong><%= model_class.human_attribute_name(:funding) %>:</strong></dt>
+          <dd><%=number_to_currency @donor.funding %></dd>
+          <dt><strong><%= model_class.human_attribute_name(:project_id) %>:</strong></dt>
+          <dd><%= @donor.project_id %></dd>
+          <dt><strong><%= model_class.human_attribute_name(:balance) %>:</strong></dt>
+          <dd><%= number_to_currency @donor.balance %></dd>
+        </dl>
+        <div class="form-actions">
+          <%= link_to t('.back', :default => t("helpers.links.back")),
+                      donors_path, :class => 'btn'  %>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_donor_path(@donor), :class => 'btn' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      donor_path(@donor),
+                      :method => 'delete',
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-danger' %>
 </div>
+      </div> 
+      <div class="tab-pane" id="tab2">
+        <%if @donor.projects.any? %>
+         <h6> Showing <%= @donor.projects.count %> Grantees under <%= @donor.name%> </h6>
+         <ol class= "microposts">
+           <%= render @projects %>
+         </ol>
+        <% end %>
+      </div>
+      <div class="tab-pane" id="tab3">
+        
+      </div>   
+    </div>
+  </div>
+
+</div>
+<div class = "span2">
+<h1>GRAPH</h1>
+</div>  
