--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -3,62 +3,83 @@
   <h1>Grant <i class="icon-suitcase icon-blue"></i></h1>
 </div>
 <div class= "span8">
-<dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
-  <dd><%= @project.name %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:location) %>:</strong></dt>
-  <dd><%= @project.location %></dd>
-  <!-- <dt><strong><%= model_class.human_attribute_name(:latitude) %>:</strong></dt>
-  <dd><%= @project.latitude %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:longitude) %>:</strong></dt>
-  <dd><%= @project.longitude %></dd> -->
-  <dt><strong><%= model_class.human_attribute_name(:balance) %>:</strong></dt>
-  <dd><%= number_to_currency @project.balance %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:amount) %>:</strong></dt>
-  <dd><%= number_to_currency @project.amount %></dd>
-  <dt><strong>File Number:</strong></dt>
-  <dd><%= @project.accountnumber %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:donor_id) %>:</strong></dt>
-  <dd><%= @project.donor.name %></dd>
-  <!--<dt><strong><%= model_class.human_attribute_name(:ledger_id) %>:</strong></dt>
-  <dd><%= @project.ledger_id %></dd> -->
-  <dt><strong><%= model_class.human_attribute_name(:budget_id) %>:</strong></dt>
-  <dd><%= @project.budget_id %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:grantee_id) %>:</strong></dt>
-  <dd><%= @project.grantee.organization %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:startdate) %>:</strong></dt>
-  <dd><%= @project.startdate %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:finish) %>:</strong></dt>
-  <dd><%= @project.finish %></dd>
+   <div class="tabbable"> <!-- Only required for left/right tabs -->
+    <ul class="nav nav-tabs">
+     <li class="active"><a href="#tab1" data-toggle="tab">Grant details</a></li>
+     <li><a href="#tab2" data-toggle="tab">Staff Members</a></li>
+     <li><a href="#tab3" data-toggle="tab">Transaction History</a></li>
+    </ul>
+    <div class="tab-content">
+     <div class="tab-pane active" id="tab1">
+       <dl class="dl-horizontal">
+          <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
+          <dd><%= @project.name %></dd>
+          <dt><strong><%= model_class.human_attribute_name(:location) %>:</strong></dt>
+          <dd><%= @project.location %></dd>
+          <!-- <dt><strong><%= model_class.human_attribute_name(:latitude) %>:</strong></dt>
+          <dd><%= @project.latitude %></dd>
+          <dt><strong><%= model_class.human_attribute_name(:longitude) %>:</strong></dt>
+          <dd><%= @project.longitude %></dd> -->
+          <dt><strong><%= model_class.human_attribute_name(:balance) %>:</strong></dt>
+          <dd><%= number_to_currency @project.balance %></dd>
+          <dt><strong><%= model_class.human_attribute_name(:amount) %>:</strong></dt>
+          <dd><%= number_to_currency @project.amount %></dd>
+          <dt><strong>File Number:</strong></dt>
+          <dd><%= @project.accountnumber %></dd>
+          <dt><strong><%= model_class.human_attribute_name(:donor_id) %>:</strong></dt>
+          <dd><%= @project.donor.name %></dd>
+          <!--<dt><strong><%= model_class.human_attribute_name(:ledger_id) %>:</strong></dt>
+          <dd><%= @project.ledger_id %></dd> -->
+          <dt><strong><%= model_class.human_attribute_name(:budget_id) %>:</strong></dt>
+          <dd><%= @project.budget_id %></dd>
+          <dt><strong><%= model_class.human_attribute_name(:grantee_id) %>:</strong></dt>
+          <dd><%= @project.grantee.organization %></dd>
+          <dt><strong><%= model_class.human_attribute_name(:startdate) %>:</strong></dt>
+          <dd><%= @project.startdate %></dd>
+          <dt><strong><%= model_class.human_attribute_name(:finish) %>:</strong></dt>
+          <dd><%= @project.finish %></dd>
+          <dt><strong><%= model_class.human_attribute_name(:milestones) %>:</strong></dt>
+          <dd><%= @project.milestones %></dd>
   
-</dl>
-<div class = "dload">
-<p><b>Download:</b></p>
-<p><%= link_to image_tag('/assets/PDFs.png'), project_path(@project, format: "pdf") %> </p> 
-</div>
+        </dl>
+          <div class = "dload">
+            <p><b>Download:</b></p>
+            <p><%= link_to image_tag('/assets/PDFs.png'), project_path(@project, format: "pdf") %> </p> 
+          </div>
+        <div class="form-actions">
+          <%= link_to t('.back', :default => t("helpers.links.back")),
+                      projects_path, :class => 'btn'  %>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_project_path(@project), :class => 'btn' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      project_path(@project),
+                      :method => 'delete',
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-danger' %>
 
-<div class="form-actions">
-  <%= link_to t('.back', :default => t("helpers.links.back")),
-              projects_path, :class => 'btn'  %>
-  <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_project_path(@project), :class => 'btn' %>
-  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              project_path(@project),
-              :method => 'delete',
-              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-              :class => 'btn btn-danger' %>
+                  
+        </div> 
+     </div>
+      <div class="tab-pane" id="tab2">
+        <%if @project.staffs.any? %>
+         <h6> Showing <%= @project.staffs.count %> Staff members </h6>
+         <ol class= "microposts">
+           <%= render @staffs %>
+         </ol>
+        <% end %>
+      </div> 
+      <div class="tab-pane" id="tab3">
+        <%if @project.budgets.any? %>
+         <h6> Showing <%= @project.budgets.count %> Transactions </h6>
+         <ol class= "microposts">
+           <%= render @budgets %>
+         </ol>
+        <% end %>
+      </div> 
+    </div>
+  </div>
+ </div>
+ <div class= "span2">
+    <h1>GRAPH</h1>
+  </div> 
 
-              
-</div>
-</div>
-
-<div class = "span2">
- 
-  <%if @project.budgets.any? %>
-    <h6> Expenditure History: Showing <%= @project.budgets.count %> record(s) </h6>
-    <ol class= "microposts">
-      <%= render @budgets %>
-    </ol>
-  <% end %>
-
-</div>
