--- a/app/views/progresses/_form.html.erb
+++ b/app/views/progresses/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @progress, :html => { :class => 'form-horizontal' } do |f| %>
+<%= simple_form_for @progress, :html => { :class => 'form-horizontal' }, :validate => true  do |f| %>
 
  
     <%= f.input :project_id,label: 'Grant Name' do %>
