--- a/app/views/signs/new.html.erb
+++ b/app/views/signs/new.html.erb
@@ -29,7 +29,7 @@
    <%= f.submit "Sign in"%>
    <br/>
    <br/>
-   <p>Register new user here <%= link_to "Register!", signup_path %></p>
+   <p><h1>forgot pword</h1><p>
    </div>
   </div> 
  </div>  
