--- a/app/views/budgets/index.html.erb
+++ b/app/views/budgets/index.html.erb
@@ -5,6 +5,8 @@
 <div> <b>Initial Allocated amount:</b>
 </div>
 </div>
+        <%= content_tag :div, "", id: "budgets_chart", data: {budgets: @budgets} %>
+
 
 <div class ="download"><b>Download:</b><%= link_to image_tag('/assets/XLS.png'), url_for(:format=>"xlsx") %></div>
 
@@ -50,3 +52,4 @@
 <%= link_to t('.new', :default => t("helpers.links.new")),
             new_budget_path,
             :class => 'btn btn-primary' %>
+</div>
