--- a/app/views/donors/_form.html.erb
+++ b/app/views/donors/_form.html.erb
@@ -1,12 +1,10 @@
-<%=  simple_form_for @donor, :html => { :class => 'form-horizontal' } do |f| %>
+<%=  simple_form_for @donor, :html => { :class => 'form-horizontal' }, :validate => true do |f| %>
     <%= f.error_notification %>
     
     <%= f.input :name %>
     <%= f.input :description, :input_html => { :style => "height: 35px" } %>
     <%= f.input :funding %>
-    <%= f.input :project_id, label: 'Grant Name'  do %>
-     <%= f.collection_select :project_id, Project.order(:name), :id, :name, include_blank:true %>
-    <%end%>  
+    <%= f.input :project, label: 'Project Name' %> 
     <%= f.input :balance, :readonly => true %>
     
   <div class="form-actions">
