--- a/app/views/donors/index.html.erb
+++ b/app/views/donors/index.html.erb
@@ -7,28 +7,31 @@
 <table class="table table-bordered">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
+      <!--<th><%= model_class.human_attribute_name(:id) %></th> -->
       <th><%= model_class.human_attribute_name(:name) %></th>
       <th><%= model_class.human_attribute_name(:description) %></th>
       <th><%= model_class.human_attribute_name(:funding) %></th>
-      <th><%= model_class.human_attribute_name(:project_id) %></th>
+      <th><%= model_class.human_attribute_name(:project) %></th>
       <th><%= model_class.human_attribute_name(:balance) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <% if current_user.admin? && !current_user?(session) %>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
+      <% end %>
     </tr>
   </thead>
   <tbody>
     <% @donors.each do |donor| %>
       <tr>
-        <td><%= link_to donor.id, donor_path(donor) %></td>
-        <td><%= donor.name %></td>
+       <!-- <td><%= link_to donor.id, donor_path(donor) %></td> -->
+        <td><%= link_to donor.name, donor_path(donor) %></td>
         <td><%= donor.description %></td>
         <td><%= number_to_currency(donor.funding) %></td>
-        <td><%= donor.project.name %></td>
+        <td><%= donor.project %></td>
         <td><%= number_to_currency donor.balance %></td>
         <td><%=l donor.created_at %></td>
-
+        <% if current_user.admin? && !current_user?(session) %>
         <td>
+          
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_donor_path(donor), :class => 'btn btn-mini' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
@@ -36,7 +39,9 @@
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
+                
         </td>
+        <% end %> 
       </tr>
     <% end %>
   </tbody>
