--- a/app/views/donors/show.html.erb
+++ b/app/views/donors/show.html.erb
@@ -7,7 +7,7 @@
     <ul class="nav nav-tabs">
      <li class="active"><a href="#tab1" data-toggle="tab">Donor details</a></li>
      <li><a href="#tab2" data-toggle="tab">Grantees </a></li>
-     <li><a href="#tab3" data-toggle="tab">Transaction History</a></li>
+     <li><a href="#tab3" data-toggle="tab"></a></li>
     </ul>
     <div class="tab-content">
      <div class="tab-pane active" id="tab1">
@@ -18,12 +18,13 @@
           <dd><%= @donor.description %></dd>
           <dt><strong><%= model_class.human_attribute_name(:funding) %>:</strong></dt>
           <dd><%=number_to_currency @donor.funding %></dd>
-          <dt><strong><%= model_class.human_attribute_name(:project_id) %>:</strong></dt>
-          <dd><%= @donor.project_id %></dd>
+          <dt><strong><%= model_class.human_attribute_name(:project) %>:</strong></dt>
+          <dd><%= @donor.project %></dd>
           <dt><strong><%= model_class.human_attribute_name(:balance) %>:</strong></dt>
           <dd><%= number_to_currency @donor.balance %></dd>
         </dl>
-        <div class="form-actions">
+        <% if current_user.admin? && !current_user?(session) %>
+              <div class="form-actions">
           <%= link_to t('.back', :default => t("helpers.links.back")),
                       donors_path, :class => 'btn'  %>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
@@ -34,8 +35,12 @@
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-danger' %>
 </div>
+<% end %>
       </div> 
       <div class="tab-pane" id="tab2">
+        <%= link_to t('.new', :default => t("helpers.links.new")),
+            new_grantee_path,
+            :class => 'btn btn-primary' %>
         <%if @donor.projects.any? %>
          <h6> Showing <%= @donor.projects.count %> Grantees under <%= @donor.name%> </h6>
          <ol class= "microposts">
