--- a/app/views/grantees/_form.html.erb
+++ b/app/views/grantees/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @grantee, :html => { :class => 'form-horizontal' } do |f| %>
+<%= simple_form_for @grantee, :html => { :class => 'form-horizontal' }, :validate => true  do |f| %>
   <fieldset>
   
   <%= f.input :firstname %>
