--- a/app/views/grantees/show.html.erb
+++ b/app/views/grantees/show.html.erb
@@ -1,8 +1,8 @@
 <%- model_class = Grantee -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+  <h2><%=t '.title', :default => model_class.model_name.human %> :<%= @grantee.firstname %> <%= @grantee.lastname %></h2>
 </div>
-
+<div class="span7">
  <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:firstname) %>:</strong></dt>
   <dd><%= @grantee.firstname %></dd>
@@ -18,8 +18,9 @@
   <dd><%= @grantee.description %></dd>
   <dt><strong>Grant:</strong></dt>
   <dd><%= @grantee.project_id %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:date) %>:</strong></dt>
-  <dd><%= @grantee.date %></dd>
+  <p> Add staff members 
+  <!--<dt><strong><%= model_class.human_attribute_name(:date) %>:</strong></dt>
+  <dd><%= @grantee.date %></dd>-->
   
   </dl>
 
@@ -33,4 +34,5 @@
               :method => 'delete',
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
               :class => 'btn btn-danger' %>
+</div>
 </div>
