--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -12,25 +12,25 @@
                     <li><a href="">About Us</a></li>
                     <li><%= link_to('Contact Us')  %></li>
 										<li><%= link_to('Registered Domains')  %></li>
-										<li><a href="http://www.flickr.com/photos/78329428@N02/" title="Flickr" target="_blank">Flickr</a></li>
+										
                 </ul>
             </div>
             <div class="span2 offset1">
-                <h4>Resource</h4>
+                <h4>Resources</h4>
                 <ul>
                     <li>
-											<a href="https://github.com/Banta/epuka/wiki"title="Documentation" target="_blank">Documentation</a>
+											<a href="https://github.com/anami90/epuka/wiki"title="Documentation" target="_blank">Documentation</a>
 										</li>
                     <li><a href="">FAQ</a></li>
                     <li>
-											<a href="https://github.com/Banta/epuka/issues"title="Issues" target="_blank">Issues</a>
+											<a href="https://github.com/anami90/epuka/issues"title="Issues" target="_blank">Issues</a>
 										</li>
                 </ul>
             </div>
             <div class="span2 offset1">
                 <h4>Connect</h4>
                 <ul>
-                    <li><a href="http://www.facebook.com/pages/Epuka/165504110244670" title="Facebook" target="_blank">Facebook</a></li>
+                    <li><a href="http://www.facebook.com/pages/GMS" title="Facebook" target="_blank">Facebook</a></li>
                     <li><a href="https://twitter.com/#!/EpukaDRS"title="Twitter" target="_blank">Twitter</a></li>
                     <li><a href="" title="LinkedIn" target="_blank">LinkedIn</a></li>
                     <li><a href="" title="Google+" target="_blank">Google+</a></li>
