--- a/app/views/progresses/index.html.erb
+++ b/app/views/progresses/index.html.erb
@@ -14,7 +14,9 @@
       <th><%= model_class.human_attribute_name(:date) %></th>
       <th>User</th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+      <% if current_user.admin? && !current_user?(session) %>
+        <th><%=t '.actions', :default => t("helpers.actions") %></th>
+       <%end%> 
     </tr>
   </thead>
   <tbody>
@@ -28,7 +30,8 @@
         <td><%= progress.date %></td>
         <td><%= progress.session.name %></td>
         <td><%=l progress.created_at %></td>
-        <td>
+        <% if current_user.admin? && !current_user?(session) %>
+              <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_progress_path(progress), :class => 'btn btn-mini' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
@@ -37,6 +40,7 @@
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
         </td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
