--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -4,75 +4,125 @@
 </div> 
 <%= search_form_for @search do |f| %>
   <div class="field">
-    <%= f.text_field :name_cont, placeholder:'Grant Name' %></div>
+    <%= f.text_field :name_cont, placeholder:'Grant Name' %>
   
   <%= f.submit "Search" %> 
  </div>
 <% end %>
+
+<%= link_to t('.new', :default => t("helpers.links.new")),
+                    new_project_path,
+                    :class => 'btn btn-primary' %>
 <div class ="download"><b>Download:</b>
 <%= link_to image_tag('/assets/XLS.png'), url_for(:format=>"xlsx") %>
 </div>
-<table class="table table-bordered">
-  <thead>
-    <tr>
-      <!--<th><%= model_class.human_attribute_name(:id) %></th> -->
-      <th><%= model_class.human_attribute_name(:name) %></th>
-      <th><%= model_class.human_attribute_name(:location) %></th>
-      <!--<th><%= model_class.human_attribute_name(:latitude) %></th>
-      <th><%= model_class.human_attribute_name(:longitude) %></th>-->
-      <th><%= model_class.human_attribute_name(:balance) %></th>
-      <th><%= model_class.human_attribute_name(:amount) %></th>
-      <th>File Number</th>
-      <th><%= model_class.human_attribute_name(:donor_id) %></th>
-      <!--<th><%= model_class.human_attribute_name(:ledger_id) %></th>
-      <th><%= model_class.human_attribute_name(:budget_id) %></th>-->
-      <th><%= model_class.human_attribute_name(:grantee_id) %></th>
-      <th><%= model_class.human_attribute_name(:startdate) %></th>
-      <th><%= model_class.human_attribute_name(:finish) %></th>
-      <!--<th><%= model_class.human_attribute_name(:created_at) %></th> -->
-      <th><%= model_class.human_attribute_name(:milestones) %></th>
-            <% if !current_user?(session) %>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
-       <%end%>
-    </tr>
-  </thead>
-  <tbody>
-    <% @projects.each do |project| %>
-      <tr>
-        <!--<td><%= link_to project.id, project_path(project) %></td>-->
-        <td><%= link_to project.name, project_path(project) %></td>
-        <td><%= project.location %></td>
-        <!--<td><%= project.latitude %></td>
-        <td><%= project.longitude %></td>-->
-        <td><%= number_to_currency project.balance %></td>
-        <td><%= number_to_currency project.amount %></td>
-        <td><%= project.accountnumber %></td>
-        <td><%= project.donor.name %></td>
-        <!--<td><%= project.ledger_id %></td>
-        <td><%= project.budget_id %></td> -->
-        <td><%= link_to project.grantee.organization, grantees_path %></td>
-        <td><%= project.startdate %></td>
-        <td><%= project.finish %></td>
-       <!-- <td><%=l project.created_at %></td>-->
-       <td><%= project.milestones %></td>
-        <td>
-          <% if !current_user?(session) %>
 
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_project_path(project), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      project_path(project),
-                      :method => :delete,
-                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-                      :class => 'btn btn-mini btn-danger' %>
-           <%end%>           
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+        
+                    
+        
 
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_project_path,
-            :class => 'btn btn-primary' %>
 
+    <ul class="nav nav-tabs">
+     <li class="active"><a href="#tab1" data-toggle="tab">Grants</a></li>
+     <li><a href="#tab2" data-toggle="tab">Visualization</a></li>
+     <li><a href="#tab3" data-toggle="tab"></a></li>
+    </ul>
+   <div class="tab-content">
+
+     <div class="tab-pane active" id="tab1">
+          <table class="table table-bordered">
+            <thead>
+            <tr>
+              <!--<th><%= model_class.human_attribute_name(:id) %></th> -->
+              <th><%= model_class.human_attribute_name(:name) %></th>
+              <th><%= model_class.human_attribute_name(:location) %></th>
+              <!--<th><%= model_class.human_attribute_name(:latitude) %></th>
+              <th><%= model_class.human_attribute_name(:longitude) %></th>-->
+              <th><%= model_class.human_attribute_name(:balance) %></th>
+              <th><%= model_class.human_attribute_name(:amount) %></th>
+              <th>File</th>
+              <th><%= model_class.human_attribute_name(:donor_id) %></th>
+              <!--<th><%= model_class.human_attribute_name(:ledger_id) %></th>
+              <th><%= model_class.human_attribute_name(:budget_id) %></th>-->
+              <th><%= model_class.human_attribute_name(:grantee_id) %></th>
+              <th><%= model_class.human_attribute_name(:startdate) %></th>
+              <th><%= model_class.human_attribute_name(:finish) %></th>
+              <!--<th><%= model_class.human_attribute_name(:created_at) %></th> -->
+              <th><%= model_class.human_attribute_name(:milestones) %></th>
+                
+                  <th><%=t '.actions', :default => t("helpers.actions") %></th>
+               
+          </tr>
+        </thead>
+        <tbody>
+          <% @projects.each do |project| %>
+            <tr>
+              <!--<td><%= link_to project.id, project_path(project) %></td>-->
+              <td><%= link_to project.name, project_path(project) %></td>
+              <td><%= project.location %></td>
+              <!--<td><%= project.latitude %></td>
+              <td><%= project.longitude %></td>-->
+              <td><%= number_to_currency project.balance %></td>
+              <td><%= number_to_currency project.amount %></td>
+              <td><%= project.accountnumber %></td>
+              <td><%= project.donor.name %></td>
+              <!--<td><%= project.ledger_id %></td>
+              <td><%= project.budget_id %></td> -->
+              <td><%= project.grantee_id %></td>
+              <td><%= project.startdate %></td>
+              <td><%= project.finish %></td>
+             <!-- <td><%=l project.created_at %></td>-->
+             <td><%= project.milestones %></td>
+
+             <% @total = @total+project.balance %>
+             
+              <td>
+                <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                            edit_project_path(project), :class => 'btn btn-mini' %>
+                <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                            project_path(project),
+                            :method => :delete,
+                            :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                            :class => 'btn btn-mini btn-danger' %>
+                        
+              </td>
+             
+            </tr>
+
+
+
+
+          <% end %>
+
+          <tr>
+
+<td> Total </td>
+<td>  </td>
+<td> <%= number_to_currency @total %> </td>
+<td>  </td>
+<td>  </td>
+<td>  </td>
+<td>  </td>
+<td>  </td>
+<td>  </td>
+<td>  </td>
+<td> </td>
+
+</tr>
+
+        </tbody>
+      </table>
+
+        <div>
+        <%= link_to t('.new', :default => t("helpers.links.new")),
+                    new_project_path,
+                    :class => 'btn btn-primary' %>
+                    
+        </div>
+     </div>
+     <div class="tab-pane active" id="tab2">
+      <div class = "span9" id: "projects_chart" >
+        <%= content_tag :div, "", id: "projects_chart", data: {projects: @projects} %>
+      </div> 
+    </div>
+ </div>
