--- a/app/views/staffs/index.html.erb
+++ b/app/views/staffs/index.html.erb
@@ -14,7 +14,9 @@
       <th>Attached Document</th>
       <th><%= model_class.human_attribute_name(:grantee_id) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
+       <% if current_user.admin? %>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
+      <%end%>
     </tr>
   </thead>
   <tbody>
@@ -28,6 +30,7 @@
         <td><i ></i><%= link_to 'PDF', staff.attachment.url, :target => '_blank' , :class =>"icon-folder-open-alt icon-blue icon-4"%> </td>
         <td><%= staff.grantee_id %></td>
         <td><%=l staff.created_at %></td>
+         <% if current_user.admin? %>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_staff_path(staff), :class => 'btn btn-mini' %>
@@ -37,6 +40,7 @@
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
         </td>
+        <%end%>
       </tr>
     <% end %>
   </tbody>
